some features and caption alignment fixes

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 /* We are using the 'Roboto' font from Google. This has already been added to your HTML header */
 
-body {
+body,
+p {
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
 }
@@ -19,7 +20,7 @@ body {
   /* background-color: red; */
   position: fixed;
   top: 30px;
-  right: 0px;
+  right: 60px;
   padding: 10px 0;
   font-size: 10px;
   width: 50%;
@@ -39,27 +40,17 @@ body {
 .logo {
   position: fixed;
   display: inline;
-  margin: 40px 700px 10px 0px;
-  max-height: 5%;
+  margin: 50px 700px 10px 0px;
+  max-height: 3%;
   left: 0px;
 }
 .page-center img {
   display: block;
-  margin-top: 20px;
+  /* margin-top: 5px; */
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 50px;
+  margin-bottom: 70px;
   width: 80%; /* cannot be centered if width is set to 100%*/
-}
-
-.footer-class {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  height: 70px;
-  border-top-style: solid;
-  border-top-width: 5px;
-  border-top-color: rgb(177, 50, 50);
 }
 
 .header {
@@ -68,6 +59,7 @@ body {
 .page-center {
   display: block;
   position: relative;
+  max-width: 100%;
 }
 .page-center p {
   position: absolute;
@@ -78,6 +70,7 @@ body {
   line-height: 30px;
 }
 .page-center p:first-child {
+  /*trying to enlarge the first line*/
   font-size: 50px;
 }
 .page-center button {
@@ -95,16 +88,32 @@ body {
 }
 .features {
   display: inline-block;
-  vertical-align: top;
+  /* vertical-align: top; */
   text-align: center;
-  width: 120px;
-  margin-left: 120px;
+  /* width: 100px; */
+  /* margin-left: 120px; */
+  font-size: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  width: 300px;
 }
 
 .features img {
-  width: 90px;
-  height: 50px;
+  display: inline-block;
+  width: 150px;
+  height: 60px;
 }
-.features caption {
+.features figcaption {
   display: block;
+  line-height: 30px;
+}
+
+.footer-class {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 70px;
+  border-top-style: solid;
+  border-top-width: 5px;
+  border-top-color: rgb(177, 50, 50);
 }
